--- a/README
+++ b/README
@@ -27,4 +27,5 @@ Thanks for people's contribution to localize this small software. So far, 5 lang
 * Amir E. Aharoni (amire80): Hebrew language
 * Sadik Khalid: Malayalam language
 * Amir E. Aharoni (amire80): Russian language
+* srikanthlogic: Tamil language
 
