Added name and language on the credits

--- a/README
+++ b/README
@@ -19,7 +19,7 @@ Steps are as below:
 
 ===Acknowledgement===
 
-Thanks for people's contribution to localize this small software. So far, 7 languges were supported:
+Thanks for people's contribution to localize this small software. So far, 8 languges were supported:
 
 * mountain: Chinese language
 * svick: Czech language
@@ -28,4 +28,5 @@ Thanks for people's contribution to localize this small software. So far, 7 lang
 * Sadik Khalid: Malayalam language
 * Amir E. Aharoni (amire80): Russian language
 * srikanthlogic: Tamil language
+* Pierros Papadeas: Greek language
 
